// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=cb02b96d6ec6740f05f8",
    194,
    {
      "fullhash": "cb02b96d6ec6740f05f8",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.super-compressed.js.gz?ver=cb02b96d6ec6740f05f8",
      },
      "size": 194,
    },
  ],
  [
    "async.async.super-compressed.js.gz?ver=cb02b96d6ec6740f05f8",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.js?var=cb02b96d6ec6740f05f8",
    16196,
    {
      "fullhash": "cb02b96d6ec6740f05f8",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.super-compressed.js.gz?var=cb02b96d6ec6740f05f8",
      },
      "size": 16196,
    },
  ],
  [
    "main.super-compressed.js.gz?var=cb02b96d6ec6740f05f8",
    4027,
    {
      "compressed": true,
      "immutable": true,
      "size": 4027,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "assets/js/async.async.js.super-compressed.gz?ver=c45511ba0ee8b89b249e#hash",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "assets/js/async.async.js?ver=c45511ba0ee8b89b249e#hash",
    194,
    {
      "fullhash": "c45511ba0ee8b89b249e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=c45511ba0ee8b89b249e#hash",
      },
      "size": 194,
    },
  ],
  [
    "assets/js/main.js.super-compressed.gz?var=c45511ba0ee8b89b249e#hash",
    4044,
    {
      "compressed": true,
      "immutable": true,
      "size": 4044,
    },
  ],
  [
    "assets/js/main.js?var=c45511ba0ee8b89b249e#hash",
    16222,
    {
      "fullhash": "c45511ba0ee8b89b249e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=c45511ba0ee8b89b249e#hash",
      },
      "size": 16222,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    {
      "compressed": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    {
      "compressed": true,
      "size": 672,
    },
  ],
  [
    "async.async.js.gz?ver=54939b56eddfbd93cccf",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.async.js?ver=54939b56eddfbd93cccf#hash",
    194,
    {
      "fullhash": "54939b56eddfbd93cccf",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "async.async.js.gz?ver=54939b56eddfbd93cccf",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=54939b56eddfbd93cccf",
    16201,
    {
      "compressed": true,
      "size": 16201,
    },
  ],
  [
    "main.js?var=54939b56eddfbd93cccf#hash",
    16201,
    {
      "fullhash": "54939b56eddfbd93cccf",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "main.js.gz?var=54939b56eddfbd93cccf",
      },
      "size": 16201,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    {
      "compressed": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz?ver=54939b56eddfbd93cccf",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=54939b56eddfbd93cccf#hash",
    194,
    {
      "fullhash": "54939b56eddfbd93cccf",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz?ver=54939b56eddfbd93cccf",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=54939b56eddfbd93cccf",
    4032,
    {
      "compressed": true,
      "size": 4032,
    },
  ],
  [
    "main.js?var=54939b56eddfbd93cccf#hash",
    16201,
    {
      "fullhash": "54939b56eddfbd93cccf",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz?var=54939b56eddfbd93cccf",
      },
      "size": 16201,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `[]`;

exports[`"filename" option show work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "assets/scripts/async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "assets/scripts/async.async.js?ver=7b6b9a731886651e2a92#hash",
    194,
    {
      "fullhash": "7b6b9a731886651e2a92",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "assets/scripts/main.js.gz",
    4048,
    {
      "compressed": true,
      "immutable": true,
      "size": 4048,
    },
  ],
  [
    "assets/scripts/main.js?var=7b6b9a731886651e2a92#hash",
    16227,
    {
      "fullhash": "7b6b9a731886651e2a92",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16227,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `[]`;

exports[`"filename" option show work: warnings 1`] = `[]`;
